# mcsat-rust

./: Cargo.toml  LICENSE  README.md
benches/: my_benchmark.rs
src/: clause.rs  decidable.rs  experimental.rs  formula.rs  lib.rs  literal.rs  main.rs  model.rs  solver.rs  state.rs  term.rs  theory.rs  trail.rs  trail_element.rs  variable.rs
src/types/: boolean.rs  constant.rs  function.rs  mod.rs  or.rs  predicate.rs  value.rs  variable.rs
