[package]
name = "mcsat-rust"
version = "0.1.0"
authors = ["Dennis Örnberg <dennis.ornberg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
hashconsing = "1.3.0"
log = { version = "0.4.14", features = ["release_max_level_off"] }
env_logger = "0.9.0"